--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Londrina+Shadow&family=Varela+Round&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
@@ -41,6 +40,8 @@ nav h1 {
   display: block;
   text-align: center;
   padding: 10px;
+  font-family: "Londrina Shadow", sans-serif;
+  font-size: 4vw;
 }
 
 .sideBar {
@@ -49,7 +50,7 @@ nav h1 {
   background-color: black;
   position: fixed;
   right: 0;
-  z-index: -10;
+  z-index: 10; /* Bring sidebar to the front */
   overflow: visible;
   padding-top: 150px;
 }
@@ -58,19 +59,19 @@ nav h1 {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  z-index: 10;
+  gap: 40px;
   position: absolute;
-  left: -200%;
+  left: -200%; /* Maintain this for custom design */
 }
 
 .sideBar li {
-  background-color: rgb(0, 0, 0);
   padding: 10px 20px;
   border-radius: 30px;
   border: 7px solid white;
   font-size: 14px;
-  cursor: crosshair;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  text-align: center;
 }
 
 li::before,
@@ -96,10 +97,22 @@ li::after {
   box-shadow: -4px -4px 0 3px white;
 }
 
-.sideBar li:hover::before {
-  transform: rotate(180deg);
+.active {
+  background-color: #005B41;
+}
+
+li:not(.active) {
+  background-color: black;
 }
 
 .sideBar li:hover {
-  border: none;
+  transform: translateX(-10px);
+}
+
+.sideBar li:hover::after, .sideBar li:hover::before {
+  left: 77.5%;
+}
+
+#play:hover {
+  background-color: #008170;
 }
