--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Londrina+Shadow&family=Varela+Round&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Londrina+Shadow&family=Varela+Round&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: "Varela Round", sans-serif;
-  color: whitesmoke;
+  color: var(--white);
+}
+
+:root {
+  --white: #f5efe7;
+  --blue: #3e5879;
+  --darkBlue: #213555;
 }
 
 body {
   width: 100vw;
   height: 100vh;
+  background-color: var(--white);
 }
 
 nav {
   width: 100vw;
   height: 100px;
-  background-color: #0f0f0f;
+  background-color: var(--blue);
   position: fixed;
 }
 
@@ -23,7 +30,7 @@ nav {
   width: 100%;
   height: auto;
   display: flex;
-  background-color: #0f0f0f;
+  background-color: transparent;
   gap: 10%;
   justify-content: center;
   align-items: center;
@@ -34,20 +41,21 @@ svg {
   position: fixed;
   top: 90px;
   z-index: -20;
+  fill: var(--blue);
 }
 
 nav h1 {
   display: block;
   text-align: center;
   padding: 10px;
-  font-family: "Londrina Shadow", sans-serif;
+  font-family: "Varela Round", sans-serif;
   font-size: 4vw;
 }
 
 .sideBar {
   height: 100vh;
   width: 50px;
-  background-color: black;
+  background-color: var(--blue);
   position: fixed;
   right: 0;
   z-index: 10; /* Bring sidebar to the front */
@@ -64,10 +72,11 @@ nav h1 {
   left: -200%; /* Maintain this for custom design */
 }
 
-.sideBar li {
+.sideBar li,
+#play {
   padding: 10px 20px;
   border-radius: 30px;
-  border: 7px solid white;
+  border: 7px solid var(--white);
   font-size: 14px;
   cursor: pointer;
   transition: background-color 0.2s ease;
@@ -85,34 +94,55 @@ li::after {
 
 li::before {
   transform: translateY(-32px);
-  background: rgb(0, 0, 0);
+  background: var(--blue);
   border-bottom-left-radius: 20px;
-  box-shadow: -4px 4px 0 3px white;
+  box-shadow: -4px 4px 0 3px var(--white);
 }
 
 li::after {
   transform: translateY(34px);
-  background: rgb(0, 0, 0);
+  background: var(--blue);
   border-top-left-radius: 20px;
-  box-shadow: -4px -4px 0 3px white;
+  box-shadow: -4px -4px 0 3px var(--white);
 }
 
 .active {
-  background-color: #005B41;
+  background-color: var(--blue);
 }
 
 li:not(.active) {
-  background-color: black;
+  background-color: var(--darkBlue);
 }
 
 .sideBar li:hover {
   transform: translateX(-10px);
 }
 
-.sideBar li:hover::after, .sideBar li:hover::before {
+.sideBar li:hover::after,
+.sideBar li:hover::before {
   left: 77.5%;
 }
 
 #play:hover {
   background-color: #008170;
+}
+
+.barContainer {
+  position: absolute;
+  width: 65vw;
+  height: auto;
+  border-left: 20px solid black;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  bottom: 40%;
+}
+
+.bar {
+  width: 60%;
+  height: 40px;
+  background-color: var(--blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
