--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: var(--white);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  gap: 30px;
 }
 
 nav {
@@ -24,6 +30,7 @@ nav {
   height: 100px;
   background-color: var(--blue);
   position: fixed;
+  top: 0;
 }
 
 .innerNav {
@@ -73,7 +80,8 @@ nav h1 {
 }
 
 .sideBar li,
-#play {
+#play,
+#pause {
   padding: 10px 20px;
   border-radius: 30px;
   border: 7px solid var(--white);
@@ -123,26 +131,45 @@ li:not(.active) {
   left: 77.5%;
 }
 
-#play:hover {
-  background-color: #008170;
-}
-
 .barContainer {
-  position: absolute;
-  width: 65vw;
-  height: auto;
-  border-left: 20px solid black;
+  width: auto;
+  height: 60vh;
   display: flex;
-  flex-direction: column;
   gap: 20px;
-  bottom: 40%;
 }
 
 .bar {
-  width: 60%;
-  height: 40px;
+  width: 40px;
+  height: 100%;
   background-color: var(--blue);
   display: flex;
   justify-content: center;
   align-items: center;
+  transform-origin: center top;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.footer {
+  position: absolute;
+  width: 80%;
+  height: 30px;
+  bottom: 0;
+  background-color: black;
+  border-radius: 30px;
+}
+.btnContainer {
+  width: auto;
+  height: auto;
+  display: flex;
+  gap: 30px;
+}
+
+.btnContainer button {
+  background-color: black;
+}
+
+#play:hover,
+#pause:hover {
+  transform: scale(1.1);
 }
