--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,7 @@ li:not(.active) {
   width: auto;
   height: 60vh;
   display: flex;
+  align-items: flex-end;
   gap: 20px;
 }
 
@@ -172,4 +173,21 @@ li:not(.active) {
 #play:hover,
 #pause:hover {
   transform: scale(1.1);
+}
+
+.range {
+  height: 30px;
+  width: 200px;
+  background-color: var(--darkBlue);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.range .field {
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 10px;
 }
