--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@ li:not(.active) {
   display: flex;
   align-items: flex-end;
   gap: 20px;
+  margin-bottom: 30px;
 }
 
 .bar {
@@ -177,10 +178,10 @@ li:not(.active) {
 
 .range {
   height: 30px;
-  width: 200px;
   background-color: var(--darkBlue);
   padding: 20px;
   border-radius: 10px;
+  position: relative;
 }
 
 .range .field {
@@ -190,4 +191,25 @@ li:not(.active) {
   align-items: center;
   display: flex;
   gap: 10px;
+}
+
+.slider {
+  width: 35px;
+  height: 35px;
+  background-color: var(--blue);
+  position: relative;
+  top: 20px;
+  left: 0%;
+  border-radius: 50% 0 50% 50%;
+  transform: rotate(-45deg);
+  border: 2px solid white;
+}
+
+.slider div {
+  transform: rotate(45deg);
+  color: var(--white);
+  position: relative;
+  right: 10px;
+  top: 12px;
+  left: 7px;
 }
