--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,7 @@ li:not(.active) {
   transform-origin: center top;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  transition: 0.5s;
 }
 
 .footer {
