--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,6 @@ li:not(.active) {
 
 .sliderRange {
   width: 93%;
-  background-color: aqua;
   position: relative;
   margin: 0 auto;
 }
@@ -223,4 +222,20 @@ li:not(.active) {
   right: 10px;
   top: 12px;
   left: 7px;
+}
+
+.timer {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  height: 50px;
+  width: 100px;
+  border: 2px solid black;
+  background-color: black;
+  border-radius: 20px;
+  font-size: 150%;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
