--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ li:not(.active) {
 
 .mergeSortContainer {
   height: 30vh;
-  left: 5%;
+  left: 2px;
   top: 20%;
   font-size: 9px;
   position: absolute;
@@ -164,6 +164,8 @@ li:not(.active) {
 
 .mergeSortContainer .bar {
   width: 15px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
 .footer {
